--- a/dependency_injection_tutorial/pom.xml
+++ b/dependency_injection_tutorial/pom.xml
@@ -5,7 +5,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.useraccount</groupId>
+	<groupId>com.github.jjbrt</groupId>
 	<artifactId>dependency-injection-tutorial</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
