--- a/spring-boot-application-adapter-tutorial/pom.xml
+++ b/spring-boot-application-adapter-tutorial/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.burningwave</groupId>
 			<artifactId>tools</artifactId>
-			<version>[0.10.2,)</version>
+			<version>0.10.3</version>
 		</dependency>	
 
 		<dependency>
