--- a/spring-boot-application-adapter/src/test/resources/burningwave.properties
+++ b/spring-boot-application-adapter/src/test/resources/burningwave.properties
@@ -1,2 +1,5 @@
 paths.jdk-home=C:/Program Files/Java/jdk1.8.0_251
-paths.dependencies-capturer.additional-resources-path=//${paths.jdk-home}/jre/lib//children:.*\\.jar;//${paths.jdk-home}/jre/lib/ext//children:.*\\.jar;
+paths.dependencies-capturer.additional-resources-path=\
+	//${paths.jdk-home}/jre/lib//children:.*\\.jar;\
+	//${paths.jdk-home}/jre/lib/ext//children:.*\\.jar;\
+	//${paths.jdk-home}/lib/ext//children:.*\\.jar;
