--- a/reflection/src/main/java/burningwave.static.properties
+++ b/reflection/src/main/java/burningwave.static.properties
@@ -1,5 +1,9 @@
+banner.hide=false
 jvm.driver=\
 	org.burningwave.jvm.DefaultDriver
 #	org.burningwave.jvm.HybridDriver
-banner.hide=false
 managed-logger.repository.enabled=false
+#avoiding the automatic call on startup of Burningwave Core to method
+#org.burningwave.core.assembler.StaticComponentContainer.Modules.exportAllToAll()
+#which exports all modules to all modules
+modules.export-all-to-all=false
