--- a/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
+++ b/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
@@ -1,3 +1,4 @@
 jvm.driver=\
-	org.burningwave.jvm.DefaultDriver
-#	org.burningwave.jvm.HybridDriver
+	io.github.toolfactory.jvm.DefaultDriver
+#	io.github.toolfactory.jvm.HybridDriver
+#	io.github.toolfactory.jvm.NativeDriver
