--- a/reflection/src/main/java/burningwave.static.properties
+++ b/reflection/src/main/java/burningwave.static.properties
@@ -1,7 +1,8 @@
 banner.hide=false
-jvm.driver=\
-	org.burningwave.jvm.DefaultDriver
-#	org.burningwave.jvm.HybridDriver
+#jvm.driver=\
+#	io.github.toolfactory.jvm.DefaultDriver
+#	io.github.toolfactory.jvm.HybridDriver
+#	io.github.toolfactory.jvm.NativeDriver
 managed-logger.repository.enabled=false
 #avoiding the automatic call on startup of Burningwave Core to method
 #org.burningwave.core.assembler.StaticComponentContainer.Modules.exportAllToAll()
