--- a/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
+++ b/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
@@ -1,3 +1,4 @@
+priority-of-this-configuration-file=2
 jvm.driver=\
 	io.github.toolfactory.jvm.DefaultDriver
 #	io.github.toolfactory.jvm.HybridDriver
