--- a/dependency_injection/pom.xml
+++ b/dependency_injection/pom.xml
@@ -13,7 +13,19 @@
 		<dependency>
 			<groupId>org.burningwave</groupId>
 			<artifactId>core</artifactId>
-			<version>9.5.1</version>
+			<version>10.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.github.toolfactory</groupId>
+					<artifactId>narcissus</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.burningwave</groupId>
+			<artifactId>jvm-driver</artifactId>
+			<version>4.0.2</version>
 		</dependency>
 	</dependencies>
 
