--- a/reflection/pom.xml
+++ b/reflection/pom.xml
@@ -14,6 +14,18 @@
 			<groupId>org.burningwave</groupId>
 			<artifactId>core</artifactId>
 			<version>10.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.github.toolfactory</groupId>
+					<artifactId>narcissus</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.burningwave</groupId>
+			<artifactId>jvm-driver</artifactId>
+			<version>4.0.2</version>
 		</dependency>
 	</dependencies>
 
