--- a/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
+++ b/spring-boot-application-adapter/src/test/resources/burningwave.static.properties
@@ -1,5 +1,6 @@
-priority-of-this-configuration-file=2
-jvm.driver=\
+priority-of-this-configuration-file=3
+jvm.driver.type=\
 	io.github.toolfactory.jvm.DefaultDriver
 #	io.github.toolfactory.jvm.HybridDriver
 #	io.github.toolfactory.jvm.NativeDriver
+jvm.driver.init=false
