--- a/dependency_injection/pom.xml
+++ b/dependency_injection/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.burningwave</groupId>
 			<artifactId>core</artifactId>
-			<version>11.0.6</version>
+			<version>12.0.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.github.toolfactory</groupId>
