--- a/reflection/src/main/java/burningwave.static.properties
+++ b/reflection/src/main/java/burningwave.static.properties
@@ -1,9 +1,8 @@
 priority-of-this-configuration-file=1
 banner.hide=false
-#jvm.driver=\
-#	io.github.toolfactory.jvm.DefaultDriver
-#	io.github.toolfactory.jvm.HybridDriver
-#	io.github.toolfactory.jvm.NativeDriver
+#jvm.driver=io.github.toolfactory.jvm.DefaultDriver
+jvm.driver=org.burningwave.jvm.DynamicDriver
+#jvm.driver=org.burningwave.jvm.NativeDriver
 managed-logger.repository.enabled=false
 #avoiding the automatic call on startup of Burningwave Core to method
 #org.burningwave.core.assembler.StaticComponentContainer.Modules.exportAllToAll()
