--- a/customize-hostname-resolution/src/main/resources/burningwave.static.properties
+++ b/customize-hostname-resolution/src/main/resources/burningwave.static.properties
@@ -1,4 +1,5 @@
 priority-of-this-configuration=3
+modules.export-all-to-all=false
 banner.hide=true
 managed-logger.repository.logging.info.disabled-for=\
 	org.burningwave.core.jvm.BufferHandler;\
