--- a/spring-boot-application-adapter/src/test/resources/burningwave.properties
+++ b/spring-boot-application-adapter/src/test/resources/burningwave.properties
@@ -1,6 +1,6 @@
 priority-of-this-configuration-=1
-paths.jdk-home=C:/Program Files/Java/jdk1.8.0_251
-#paths.jdk-home=F:/Shared/Programmi/Java/jdk/1.8.0_251
+#paths.jdk-home=C:/Program Files/Java/jdk1.8.0_251
+paths.jdk-home=F:/Shared/Programmi/Java/jdk/1.8.0_251
 paths.dependencies-capturer.additional-resources-path=\
 	//${paths.jdk-home}/jre/lib//children:.*\\.jar;\
 	//${paths.jdk-home}/jre/lib/ext//children:.*\\.jar;\
