--- a/customize-hostname-resolution/src/main/resources/hosts.yml
+++ b/customize-hostname-resolution/src/main/resources/hosts.yml
@@ -1,7 +1,9 @@
 dns:
   servers:
     - ip: 208.67.222.222
+      port: 53
     - ip: 208.67.222.220
+      port: 53
 hostAliases:
   - ip: 123.123.123.123
     hostnames:
