--- a/customize-hostname-resolution/src/main/resources/hosts.yml
+++ b/customize-hostname-resolution/src/main/resources/hosts.yml
@@ -2,8 +2,14 @@ dns:
   servers:
     - ip: 208.67.222.222
       port: 53
+      ipTypeToSearchFor:
+        - IPV4
+        - IPV6
     - ip: 208.67.222.220
       port: 53
+      ipTypeToSearchFor:
+        - IPV4
+        - IPV6
 hostAliases:
   - ip: 123.123.123.123
     hostnames:
