--- a/customize-hostname-resolution/pom.xml
+++ b/customize-hostname-resolution/pom.xml
@@ -43,5 +43,26 @@
 		</dependency>
 
 	</dependencies>
-
+	
+	<build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-dependency-plugin</artifactId>
+	            <version>3.1.2</version>
+	            <executions>
+	                <execution>
+	                    <goals>
+	                        <goal>sources</goal>
+	                        <goal>resolve</goal>
+	                    </goals>
+	                    <configuration>
+	                        <classifier>javadoc</classifier>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
+	    </plugins>
+	</build>
+	
 </project>
