--- a/spring-boot-application-adapter/pom.xml
+++ b/spring-boot-application-adapter/pom.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.github.jjbrt.java-tutorials</groupId>
 	<artifactId>spring-boot-application-adapter</artifactId>
 	<packaging>war</packaging>
@@ -21,33 +20,33 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>org.burningwave</groupId>
 			<artifactId>tools</artifactId>
 			<version>0.25.9</version>
-		</dependency>	
-		
+		</dependency>
+
 		<dependency>
-	        	<groupId>javax.xml.bind</groupId>
-	        	<artifactId>jaxb-api</artifactId>
-	        	<version>2.3.0</version>
-	    	</dependency>
-	    	<dependency>
-	        	<groupId>com.sun.xml.bind</groupId>
-	        	<artifactId>jaxb-impl</artifactId>
-	        	<version>2.3.0</version>
-	    	</dependency>
-	    <dependency>
-	        <groupId>org.glassfish.jaxb</groupId>
-	        <artifactId>jaxb-runtime</artifactId>
-	        <version>2.3.0</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>javax.activation</groupId>
-	        <artifactId>activation</artifactId>
-	        <version>1.1.1</version>
-	    </dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -82,7 +81,7 @@
 			<artifactId>bootstrap</artifactId>
 			<version>3.3.7</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
