--- a/customize-hostname-resolution/pom.xml
+++ b/customize-hostname-resolution/pom.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.github.jjbrt.java-tutorials</groupId>
 	<artifactId>customize-hostname-resolution</artifactId>
 
@@ -17,52 +16,52 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>org.burningwave</groupId>
 			<artifactId>tools</artifactId>
 			<version>0.25.9</version>
-		</dependency>	
-		
+		</dependency>
+
 		<dependency>
-            		<groupId>com.fasterxml.jackson.core</groupId>
-            		<artifactId>jackson-core</artifactId>
-            		<version>${jackson.version}</version>
-        	</dependency>
-		
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
 		<dependency>
-        		<groupId>com.fasterxml.jackson.dataformat</groupId>
-        		<artifactId>jackson-dataformat-yaml</artifactId>
-        		<version>${jackson.version}</version>
-        	</dependency>
-        
-        	<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
 			<version>3.5.1</version>
 		</dependency>
 
 	</dependencies>
-	
+
 	<build>
-	    <plugins>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-dependency-plugin</artifactId>
-	            <version>3.1.2</version>
-	            <executions>
-	                <execution>
-	                    <goals>
-	                        <goal>sources</goal>
-	                        <goal>resolve</goal>
-	                    </goals>
-	                    <configuration>
-	                        <classifier>javadoc</classifier>
-	                    </configuration>
-	                </execution>
-	            </executions>
-	        </plugin>
-	    </plugins>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.1.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>sources</goal>
+							<goal>resolve</goal>
+						</goals>
+						<configuration>
+							<classifier>javadoc</classifier>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
-	
+
 </project>
